overflow fixed by adding hidden property to the HTML

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@ html {
   width: 100%;
   background-image: url('../src/assets/textures/paper-texture.jpg');
   background-color: #efaf4d;
+  overflow-x: hidden;
 
   background-repeat: repeat;
   background-blend-mode: multiply;
@@ -11,8 +12,8 @@ html {
   
   body {
       display: flex;
-      height: 100%;
-      width: 99%;
+      height: 98%;
+      width: 100%;
       flex-direction: column;
 
       #root {
@@ -23,4 +24,15 @@ html {
   }
 }
 
+
+@media screen and (max-width: 750px) {
+  html{
+    overflow-x: hidden;
+
+    body{
+      overflow-x: hidden;
+    }
+
+  }
+}
 
